option('usewebcam', type: 'boolean', value: false, description: 'Build with webcam support (opencv)')
option('usemididrum', type: 'boolean', value: false, description: 'Build with midi drum support (portmidi)')
option('usewebserver', type: 'boolean', value: false, description: 'Build with web server support (cpprest)')
option('stoponwarning', type: 'boolean', value: false, description: 'Stop compilation if a warning is detected')
