project(libda)
cmake_minimum_required(VERSION 2.6)

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREAD ON)
find_package(Boost 1.34 REQUIRED COMPONENTS thread filesystem)

find_package(Alsa)
find_package(GStreamer)
find_package(Jack)
find_package(Portaudio)
find_package(PulseAudio)

add_library(da_audio_dev_tone SHARED audio_dev_tone.cpp)
install(TARGETS da_audio_dev_tone DESTINATION lib/da)

if (ALSA_FOUND)
	include_directories(${ALSA_INCLUDE_DIR})
	include_directories(${CMAKE_SOURCE_DIR})
	add_library(da_audio_dev_alsa SHARED audio_dev_alsa.cpp)
	target_link_libraries(da_audio_dev_alsa ${ALSA_LIBRARIES})
	install(TARGETS da_audio_dev_alsa DESTINATION lib/da)
endif (ALSA_FOUND)

if (GSTREAMER_LIBRARIES)
	include_directories(${GSTREAMER_INCLUDE_DIRS})
	add_definitions(${GSTREAMER_DEFINITIONS})
	add_library(da_audio_dev_gst SHARED audio_dev_gst.cpp)
	target_link_libraries(da_audio_dev_gst ${GSTREAMER_LIBRARIES})
	install(TARGETS da_audio_dev_gst DESTINATION lib/da)
endif (GSTREAMER_LIBRARIES)

if (JACK_LIBRARIES)
	include_directories(${JACK_INCLUDE_DIRS})
	add_library(da_audio_dev_jack SHARED audio_dev_jack.cpp)
	target_link_libraries(da_audio_dev_jack ${JACK_LIBRARIES})
	install(TARGETS da_audio_dev_jack DESTINATION lib/da)
endif (JACK_LIBRARIES)

# TODO: fix FindPortaudio.cmake to report the version and build the right version
if (PORTAUDIO_FOUND)
	if( ${PORTAUDIO_VERSION} EQUAL 18 )
		include_directories(${PORTAUDIO_INCLUDE_DIRS})
		add_library(da_audio_dev_pa18 SHARED audio_dev_pa18.cpp)
		target_link_libraries(da_audio_dev_pa18 ${PORTAUDIO_LIBRARIES})
		install(TARGETS da_audio_dev_pa18 DESTINATION lib/da)
	endif( ${PORTAUDIO_VERSION} EQUAL 18 )
	if( ${PORTAUDIO_VERSION} EQUAL 19 )
		include_directories(${PORTAUDIO_INCLUDE_DIRS})
		add_library(da_audio_dev_pa19 SHARED audio_dev_pa19.cpp)
		target_link_libraries(da_audio_dev_pa19 ${PORTAUDIO_LIBRARIES})
		install(TARGETS da_audio_dev_pa19 DESTINATION lib/da)
	endif( ${PORTAUDIO_VERSION} EQUAL 19 )
endif (PORTAUDIO_FOUND)

if (PULSEAUDIO_FOUND)
	include_directories(${PULSEAUDIO_INCLUDE_DIR})
	add_library(da_audio_dev_pulse SHARED audio_dev_pulse.cpp)
	target_link_libraries(da_audio_dev_pulse ${PULSEAUDIO_LIBRARIES})
	message("PA: ${PULSEAUDIO_LIBRARIES}")
	install(TARGETS da_audio_dev_pulse DESTINATION lib/da)
endif (PULSEAUDIO_FOUND)

include_directories(${BOOST_INCLUDE_DIR})
add_library(da audio.cpp)
target_link_libraries(da ${BOOST_LIBRARIES})
install(TARGETS da DESTINATION lib)


